--- a/cloudestimate/config/software/windows_server.yaml
+++ b/cloudestimate/config/software/windows_server.yaml
@@ -1,31 +1,22 @@
 software:
   name: "Windows Server"
-  description: "Windows Server for enterprise-grade and Windows-based workloads."
+  description: "Microsoft Windows Server OS for enterprise and cloud infrastructure."
   fixed_components:
     - name: "Primary Compute Unit"
       type: "compute"
       compute_requirements:
-        vcpu: 8
-        memory_gb: 32
-        storage_gb: 200
-  variable_components:
-    - name: "Additional Load"
-      type: "variable-compute"
-      user_inputs:
-        users: 1000
-        workload: "medium"
-        activity: "moderate"
-      usage_profiles:
-        medium:
-          light:
-            average_vcpu_per_user: 0.04
-            average_memory_per_user_gb: 0.2
-            storage_per_user_gb: 10
-          moderate:
-            average_vcpu_per_user: 0.08
-            average_memory_per_user_gb: 0.4
-            storage_per_user_gb: 20
-          heavy:
-            average_vcpu_per_user: 0.16
-            average_memory_per_user_gb: 0.8
-            storage_per_user_gb: 30
+        vcpu: 4
+        memory_gb: 16
+        storage_gb: 100
+      cloud_skus:
+        aws: "m5.xlarge"
+        gcp: "n1-standard-4"
+        azure: "D4s_v3"
+    - name: "Storage"
+      type: "storage"
+      storage_requirements:
+        storage_gb: 100
+      cloud_skus:
+        aws: "general_purpose_ssd"
+        gcp: "standard_persistent_disk"
+        azure: "standard_persistent_disk"
