--- a/cloudestimate/config/software/gitlab.yaml
+++ b/cloudestimate/config/software/gitlab.yaml
@@ -19,7 +19,7 @@ software:
         storage_gb: 500
       cloud_skus:
         aws: "general_purpose_ssd"
-        gcp: "ssd_persistent_disk"
+        gcp: "standard_persistent_disk"
         azure: "ssd_persistent_disk"
 
   variable_components:
@@ -30,20 +30,6 @@ software:
         workload: "medium"
         activity: "moderate"
       usage_profiles:
-        simple:
-          light:
-            average_vcpu_per_user: 0.01
-            average_memory_per_user_gb: 0.05
-            storage_per_user_gb: 2
-          moderate:
-            average_vcpu_per_user: 0.02
-            average_memory_per_user_gb: 0.1
-            storage_per_user_gb: 5
-          heavy:
-            average_vcpu_per_user: 0.04
-            average_memory_per_user_gb: 0.2
-            storage_per_user_gb: 10
-
         medium:
           light:
             average_vcpu_per_user: 0.02
@@ -58,16 +44,13 @@ software:
             average_memory_per_user_gb: 0.4
             storage_per_user_gb: 20
 
-        complex:
-          light:
-            average_vcpu_per_user: 0.05
-            average_memory_per_user_gb: 0.25
-            storage_per_user_gb: 10
-          moderate:
-            average_vcpu_per_user: 0.1
-            average_memory_per_user_gb: 0.5
-            storage_per_user_gb: 20
-          heavy:
-            average_vcpu_per_user: 0.2
-            average_memory_per_user_gb: 1
-            storage_per_user_gb: 40
+  # Add GPU requirements (optional)
+  gpu_requirements:
+    - name: "GPU for CI/CD Runners"
+      gpu_requirements:
+        gpu_count: 1
+        gpu_memory_gb: 16
+      cloud_skus:
+        aws: "g4dn.xlarge"
+        gcp: "nvidia-t4"
+        azure: "NC4as_T4_v3"
